--- a/notebooks/matrix_chain_mult.ipynb
+++ b/notebooks/matrix_chain_mult.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,16 +62,12 @@
       "['00000', '00006', '00018'] ['0', '0', '1']\n",
       "['00000', '00000', '00024'] ['0', '0', '1']\n",
       "['00000', '00000', '00000'] ['0', '0', '0']\n",
-      "0 2 : 1\n",
-      "0 1 : 0\n",
       "((A0 A1) A2)\n",
       "[20, 30, 45, 50]\n",
       "Minimum number of multiplications: 72000\n",
       "['00000', '27000', '72000'] ['0', '0', '1']\n",
       "['00000', '00000', '67500'] ['0', '0', '1']\n",
       "['00000', '00000', '00000'] ['0', '0', '0']\n",
-      "0 2 : 1\n",
-      "0 1 : 0\n",
       "((A0 A1) A2)\n",
       "[30, 35, 15, 5, 10, 20, 25]\n",
       "Minimum number of multiplications: 15125\n",
@@ -81,11 +77,6 @@
       "['00000', '00000', '00000', '00000', '01000', '03500'] ['0', '0', '0', '0', '3', '4']\n",
       "['00000', '00000', '00000', '00000', '00000', '05000'] ['0', '0', '0', '0', '0', '4']\n",
       "['00000', '00000', '00000', '00000', '00000', '00000'] ['0', '0', '0', '0', '0', '0']\n",
-      "0 5 : 2\n",
-      "0 2 : 0\n",
-      "1 2 : 1\n",
-      "3 5 : 4\n",
-      "3 4 : 3\n",
       "((A0 (A1 A2)) ((A3 A4) A5))\n"
      ]
     }
@@ -93,8 +84,12 @@
    "source": [
     "# see CLR algo\n",
     "# matrix A_i has dims p_i-l x p_i\n",
-    "\n",
     "# 30x35 35x15 15x5 5x10 10x20 20x25\n",
+    "\n",
+    "# and: https://en.wikipedia.org/wiki/Matrix_chain_multiplication\n",
+    "\n",
+    "# see also: https://learning.oreilly.com/library/view/hands-on-data-structures/9781788995573/91ca4b91-2e11-486c-b9ec-b7341a521a3f.xhtml\n",
+    "# for [20, 30, 45, 50] min number of multiplications=72000\n",
     "tests = [[2, 2], [1, 2, 3, 4], [20, 30, 45, 50], [30, 35, 15, 5, 10, 20, 25]]\n",
     "for t in tests:\n",
     "    print(t)\n",
